err.txt
   Compiling rust_upscaler v0.1.0 (D:\ASUNA\Tools\Visual_studio\rust_upscaler)
error[E0616]: field `inputs` of struct `Session` is private
  --> src\main.rs:87:36
   |
87 |                 let input_name = s.inputs.first().map(|i| i.name.as_str()).unwrap_or("input");
   |                                    ^^^^^^ private field
   |
help: a method `inputs` also exists, call it with parentheses
   |
87 |                 let input_name = s.inputs().first().map(|i| i.name.as_str()).unwrap_or("input");
   |                                          ++

error[E0277]: the trait bound `ArrayBase<ViewRepr<&f32>, ndarray::Dim<[usize; 4]>>: OwnedTensorArrayData<_>` is not satisfied
   --> src\main.rs:88:63
    |
 88 |                 let input_val = ort::value::Value::from_array(nd_array.view()).map_err(anyhow::Error::msg)?;
    |                                 ----------------------------- ^^^^^^^^^^^^^^^ the trait `OwnedTensorArrayData<_>` is not implemented for `ArrayBase<ViewRepr<&f32>, ndarray::Dim<[usize; 4]>>`
    |                                 |
    |                                 required by a bound introduced by this call
    |
help: the following other types implement trait `OwnedTensorArrayData<I>`
   --> C:\Users\totor\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\value\impl_tensor\create.rs:443:1
    |
443 | impl<T: Clone + 'static, D: Dimension + 'static> OwnedTensorArrayData<T> for Array<T, D> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ndarray::ArrayBase<ndarray::data_repr::OwnedRepr<T>, D>`
...
554 | impl<T: Clone + 'static, D: ToShape> OwnedTensorArrayData<T> for (D, Vec<T>) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(D, Vec<T>)`
...
570 | impl<T: Clone + 'static, D: ToShape> OwnedTensorArrayData<T> for (D, Box<[T]>) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(D, Box<[T]>)`
note: required by a bound in `value::impl_tensor::create::<impl ort::value::Value<TensorValueType<T>>>::from_array`
   --> C:\Users\totor\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\value\impl_tensor\create.rs:140:32
    |
140 |     pub fn from_array(input: impl OwnedTensorArrayData<T>) -> Result<Tensor<T>> {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `value::impl_tensor::create::<impl Value<TensorValueType<T>>>::from_array`

error[E0277]: the trait bound `{integer}: AsRef<str>` is not satisfied
  --> src\main.rs:91:46
   |
91 |                 let output_val = outputs.get(0).ok_or_else(|| anyhow::anyhow!("No outputs"))?;
   |                                          --- ^ the trait `AsRef<str>` is not implemented for `{integer}`
   |                                          |
   |                                          required by a bound introduced by this call
   |
note: required by a bound in `SessionOutputs::<'r>::get`
  --> C:\Users\totor\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\session\output.rs:74:30
   |
74 |     pub fn get(&self, key: impl AsRef<str>) -> Option<&DynValue> {
   |                                 ^^^^^^^^^^ required by this bound in `SessionOutputs::<'r>::get`

error[E0599]: no method named `try_extract_raw` found for reference `&ort::value::Value` in the current scope
  --> src\main.rs:93:59
   |
93 |                 let (dims_i64, output_slice) = output_val.try_extract_raw::<f32>().map_err(anyhow::Error::msg)?;
   |                                                           ^^^^^^^^^^^^^^^
   |
help: there is a method `try_extract_map` with a similar name
   |
93 -                 let (dims_i64, output_slice) = output_val.try_extract_raw::<f32>().map_err(anyhow::Error::msg)?;
93 +                 let (dims_i64, output_slice) = output_val.try_extract_map::<f32>().map_err(anyhow::Error::msg)?;
   |

error[E0282]: type annotations needed
  --> src\main.rs:94:34
   |
94 |                 let output_vec = output_slice.to_vec();
   |                                  ^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\main.rs:95:40
   |
95 |                 let dims: Vec<usize> = dims_i64.iter().map(|&x| x as usize).collect();
   |                                        ^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0277, E0282, E0599, E0616.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `rust_upscaler` (bin "rust_upscaler") due to 6 previous errors
